--- a/payment/templates/payment/billing_info.html
+++ b/payment/templates/payment/billing_info.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
         <!-- Header-->
@@ -15,94 +14,91 @@
         <br/>
         <div class="container">
             <div class="row">
-                
-                    <div class="col-md-6 offset-md-3">
-          <div class="card">
-          <div class="card-header">
-            Order Summary
-          </div>
-          <div class="card-body">
-            {% for product in cart_products %}
-                {{ product.name }}: 
-                    {% if product.is_sale %}
-                        ${{ product.sale_price }}
-                    {% else %}
-                        ${{ product.price }}
-                {% endif %}
+                <div class="col-md-6 offset-md-3">
+                    <div class="card">
+                        <div class="card-header">
+                            Order Summary
+                        </div>
+                        <div class="card-body">
+                            {% for product in cart_products %}
+                                <div class="d-flex justify-content-between">
+                                    <span>{{ product.name }}:</span>
+                                    <span>
+                                        {% if product.is_sale %}
+                                            <span class="text-danger">${{ product.sale_price }}</span>
+                                        {% else %}
+                                            ${{ product.price }}
+                                        {% endif %}
+                                    </span>
+                                </div>
+                                <small>Quantity: 
+                                    {% for key, value in quantities.items %}
+                                        {% if key == product.id|slugify %}
+                                            {{ value }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </small>
+                                <br/><br/>
+                            {% endfor %}
+                            <div class="d-flex justify-content-between">
+                                <strong>Total:</strong>
+                                <strong>${{ totals }}</strong>
+                            </div>
+                            <br/><br/>
+                            <a href="{% url 'cart_summary' %}" class="btn btn-sm btn-outline-secondary">Update Items</a>
+                        </div>
+                    </div>
+                    <br/><br/>
 
-                <br/>
-                <small>Quantity: 
-                {% for key, value in quantities.items %}
-                    {% if key == product.id|slugify %}
-                        {{ value }}
-                    {% endif %}
-                {% endfor %}</small>
-                <br/><br/>
+                    <div class="card">
+                        <div class="card-header">
+                            Shipping Info
+                        </div>
+                        <div class="card-body">
+                            <p>Name: {{ shipping_info.shipping_full_name }}</p>
+                            <p>Email: {{ shipping_info.shipping_email }}</p>
+                            <p>Address 1: {{ shipping_info.shipping_address1 }}</p>
+                            <p>Address 2: {{ shipping_info.shipping_address2 }}</p>
+                            <p>City: {{ shipping_info.shipping_city }}</p>
+                            <p>State: {{ shipping_info.shipping_state }}</p>
+                            <p>Zipcode: {{ shipping_info.shipping_zipcode }}</p>
+                            <p>Country: {{ shipping_info.shipping_country }}</p>
+                            <br/>
+                            <a href="{% url 'checkout' %}" class="btn btn-outline-secondary">Update Shipping</a>
+                        </div>
+                    </div>
+                    <br/><br/>
 
-            {% endfor %}
-            Total:  ${{ totals }}
-            <br/><br/>
-            <a href="{% url 'cart_summary' %}" class="btn btn-sm btn-outline-secondary">Update Items</a>
-          </div>
-        </div>
-<br/><br/>
-<div class="card">
-  <div class="card-header">
-    Shipping Info
-  </div>
-  <div class="card-body">
-    
-    Name: {{ shipping_info.shipping_full_name }}<br/>
-    Email: {{ shipping_info.shipping_email }}<br/>
-    Address 1: {{ shipping_info.shipping_address1 }}<br/>
-    Address 2: {{ shipping_info.shipping_address2 }}<br/>
-    City: {{ shipping_info.shipping_city }}<br/>
-    State: {{ shipping_info.shipping_state }}<br/>
-    Zipcode: {{ shipping_info.shipping_zipcode }}<br/>
-    Country: {{ shipping_info.shipping_country }}<br/>
-    <br/>
-    <a href="{% url 'checkout' %}" class="btn btn-outline-secondary">Update Shipping</a>
+                    <center>
+                        <!-- PayPal button with image representation -->
+                        <div>
+                            <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_100x26.png" alt="Pay with PayPal" />
+                        </div>
+                        {{ paypal_form.render }}
+                    </center>
 
-  </div>
-</div>
-<br/><br/>
+                    <br/><br/>
 
-<center>
-    {{ paypal_form.render }}
-</center>
+                    <div class="card">
+                        <div class="card-header">
+                            Billing Info
+                        </div>
+                        <div class="card-body">
+                            <form method="POST" action="{% url 'process_order' %}">
+                                {% csrf_token %}
+                                {{ billing_form.as_p }}
+                            </form>
+                        </div>
+                    </div>
+                    <br/>
 
-<br/><br/>
-
-
-<div class="card">
-  <div class="card-header">
-    Billing Info
-  </div>
-  <div class="card-body">
-    <form method="POST" action="{% url 'process_order' %}">
-      {% csrf_token %}
-    {{ billing_form.as_p }}
-    
-  </div>
-</div>
-<br/>
-
-
-
-<button type="submit" class="btn btn-secondary">
-  Pay Now
-</button>
-</form>
-<br/><br/>
-
-
+                    <button type="submit" class="btn btn-secondary w-100">
+                        Pay Now
+                    </button>
+                    </form>
+                    <br/><br/>
+                </div>
             </div>
         </div>
-    </div>
-
-
-
-
-
 
 {% endblock %}
