--- a/store/templates/update_password.html
+++ b/store/templates/update_password.html
@@ -1,56 +1,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> 
-                  Update Password </h1>
-
-                    <p class="lead fw-normal text-white-50 mb-0"> Update User Password</p>
-                </div>
+    <!-- Header -->
+    <header class="py-5" style="background: linear-gradient(to right, #002F6C, #FF7F32);">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">Update Password</h1>
+                <p class="lead fw-normal text-white-50 mb-0">Manage your Hope College Marketplace account password</p>
             </div>
-
-        </header>
-
-        <div class="container ">
-            <div class ="row">
-                <center>
-                    <div class= "col-md-6 offet-md-3"> 
-                      
-                        
-                        <br/><br>
-                        <br/><br>
-                        <br/><br>
-        <form method="POST" action ="{% url 'update_password' %}">
-            {% csrf_token %}
-            {{form.as_p}}
-               <br/><br>
-                  <br/><br>
-                  <button type ="submit" class = "btn btn-secondary">
-                      Update Password
-                  </button>
-
-
- 
-</form>
-                          <br/><br>
-                            <br/><br>
-                              <br/><br>
-                                <br/><br>
-                                <br/><br>
-                                <br/><br>
-                                <br/><br>
-
-
-                </div>
-                    </div>
-</center>
-            </div>
-
-
         </div>
+    </header>
 
+    <!-- Update Password Form -->
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-header text-white" style="background-color: #FF7F32;">
+                        <h5 class="m-0">Update Your Password</h5>
+                    </div>
+                    <div class="card-body">
+                        <form method="POST" action="{% url 'update_password' %}">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                {{ form.as_p }}
+                            </div>
+                            <div class="text-center mt-3">
+                                <button type="submit" class="btn btn-block text-white" style="background-color: #002F6C;">Update Password</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="text-center mt-4">
+                    <a href="{% url 'update_user' %}" class="btn btn-secondary">Back to Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
