--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -1,113 +1,61 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> 
-                    Shop in style </h1>
-               
-               
-
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                </div>
+    <!-- Header-->
+    <header class="py-5" style="background: linear-gradient(to right, #002F6C, #FF7F32);">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">Hope College Marketplace</h1>
+                <p class="lead fw-normal text-white-50 mb-0">Your one-stop shop for all things Hope College</p>
             </div>
-
-
-        </header>
-        <!-- Section-->
-
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-
-              
-                    {% for product in products %}
-                        {% if product.is_sale%}
-                        <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- SALE -->
-                           <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; right: 0.5rem;"> Sale</div>
-
-
-                            <!-- Product image-->
-                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ product.name}}</h5>
-                                    <!-- SALE SINE-->
-                                          <div class="d-flex justify-content-center small text-warning mb-5"> 
-                                            <div class="bi-star-fill">
-                                                
-                                            </div>
-                                            &nbsp;&nbsp;Sale!!!&nbsp;&nbsp;
-
-                                         <div class="bi-star-fill">
-                                             
-                                         </div>
-                                         </div>
-
-
-
-                                    <!-- Product price-->
-                                      <strike>
-                                        ${{ product.price}}
-                                      </strike>
-                                         &nbsp;${{ product.sale_price}}
-                                     <br/>
-                                     {{ product.category}}
-                                    <br/>
-                                    {{ product.description}}
-                                  
-
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a></div>
-                            </div>
-                        </div>
-                    </div>
-
-                        {% else %}
-
-
+        </div>
+    </header>
+    
+    <!-- Section-->
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                
+                {% for product in products %}
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
-                            <!-- Product details-->
+                            {% if product.is_sale %}
+                                <!-- SALE Badge -->
+                                <div class="badge bg-orange text-white position-absolute" style="top: 0.5rem; right: 0.5rem;">Sale</div>
+                            {% endif %}
+                            
+                            <!-- Product image -->
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}" />
+                            
+                            <!-- Product details -->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ product.name}}</h5>
-                                    <!-- Product price-->
-                                    ${{ product.price}}
-                                     <br/>
-                                     {{ product.category}}
-                                    <br/>
-                                    {{ product.description}}
+                                    <!-- Product name -->
+                                    <h5 class="fw-bolder">{{ product.name }}</h5>
+                                    
+                                    {% if product.is_sale %}
+                                        <div class="text-warning fw-bold">Limited Time Offer!</div>
+                                        <strike>${{ product.price }}</strike> <span class="text-orange">${{ product.sale_price }}</span>
+                                    {% else %}
+                                        <p class="fw-bold">${{ product.price }}</p>
+                                    {% endif %}
+                                    
+                                    <p class="text-muted">{{ product.category }}</p>
+                                    <p>{{ product.description }}</p>
                                 </div>
                             </div>
-                            <!-- Product actions-->
+                            
+                            <!-- Product actions -->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto"href="{% url 'product' product.id %}">View Product</a></div>
-
+                                <div class="text-center">
+                                    <a class="btn btn-hope-blue mt-auto" href="{% url 'product' product.id %}">View Product</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                        {% endif %}
-
-                       {% endfor %}
-
-                       
-
-
-
-                   
+                {% endfor %}
+                
             </div>
-        </section>
-    {% endblock %}
+        </div>
+    </section>
+{% endblock %}
