--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -10,6 +10,9 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'search' %}">Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'add_product' %}">Add Product</a></li>
+                         {% endif %}
 
             {% if user.is_authenticated %}
               
